Added project description RobotMotionPlanning.ipynb

--- a/RobotMotionPlanning.ipynb
+++ b/RobotMotionPlanning.ipynb
@@ -4,9 +4,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Robot Motion Planning Capstone Project \n",
-    "## This notebook can be used to explore the code for this project  \n",
-    "Run the following 3 cells to execute the core scripts to run the robot."
+    "# Robot Motion Planning Capstone Project\n",
+    "## John Kinstler - 07/26/17\n",
+    "### Project files at https://github.com/m00nd00r/MicroMouse\n",
+    "\n",
+    "### Project Overview\n",
+    "The goal of robot motion planning is to find a path for a robot to follow from a starting point to some distant waypoint without colliding with obstacles in the world (also called the configuration space) the robot is moving through. In this particular iteration I will be creating and testing algorithms to allow a robot mouse to plot and navigate a virtual maze.\n",
+    "\n",
+    "Motion planning has applications in autonomous and automation robotics, in video game artificial intelligence, architectural design, medicine and biology. It is further used in the nascent self-driving car industry.\n",
+    "\n",
+    "My own particular interest in this area arose from implementing reinforcement learning to teach a Smart Cab to learn the rules of the road for a previous project. Here, rather, different algorithms will be explored as a potential solution.\n",
+    "\n",
+    "### Problem Statement\n",
+    "This project takes inspiration from [Micromouse](https://en.wikipedia.org/wiki/Micromouse) competitions, wherein a robot mouse is tasked with plotting a path from the lower left corner of the maze to a 4 square center where only one of the squares has an opening. The robot mouse may make 2 runs in a given maze. In the first run, the robot mouse tries to map out the maze to figure out the path to the center. In the second run, the robot mouse attempts to reach the center in the fastest time possible, using what it has previously learned.\n",
+    "\n",
+    "In this project, I will create functions to control a virtual robot to navigate a virtual maze. A simplified model of the world is provided along with specifications for the maze and robot; the goal is to obtain the fastest times possible in a series of test mazes.\n",
+    "\n",
+    "There are a variety of motion planning algorithms which are detailed [here](https://en.wikipedia.org/wiki/Motion_planning). Some further discussion on this topic can be found [here](http://www.gamasutra.com/blogs/MatthewKlingensmith/20130907/199787/Overview_of_Motion_Planning.php), wherein the author describes 3 algorithms most commonly used to solve motion planning problems which are A\\* grid search, Visibility Graphs, and Flow Fields. Alternatively, I could explore more typical machine learning algorithms such as Neural Networks or Reinforcement Learning.\n",
+    "\n",
+    "This project will likely be best accomplished using the A\\* algorithm for which implementation guidance can be found [here](http://www.redblobgames.com/). \n",
+    "\n",
+    "I have also found another algorithm called [D\\*-Lite](https://en.wikipedia.org/wiki/D*#D.2A_Lite) search which takes a bit of different approach to A\\*. The implementation I used for this D\\*-Lite was borrowed from Sebastian Thrun's AI-Robotics class on Udacity."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To see how the basic code works, run the following 3 cells to execute the core scripts to run the robot."
    ]
   },
   {
