update: changed showroute display:

--- a/RobotMotionPlanning.ipynb
+++ b/RobotMotionPlanning.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -41,7 +41,7 @@
     "import tester,tester_1\n",
     "import solve_maze\n",
     "import strategy_test as st\n",
-    "from IPython.display import Image"
+    "from IPython.display import Image, SVG, display"
    ]
   },
   {
@@ -70,15 +70,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.environ['TEST_REPORT'] = 'True'\n",
     "os.environ['COVERAGE_RESET_THRESHOLD'] = 'goal'\n",
     "os.environ['MAP_STRATEGY'] = 'smart map 2'\n",
     "os.environ['MAPPER'] = 'mapper2'\n",
-    "os.environ['SHOWROUTE'] = 'True'"
+    "os.environ['SHOWROUTE'] = 'False'"
    ]
   },
   {
@@ -100,8 +102,9 @@
    "source": [
     "!python tester_1.py test_maze_04.txt\n",
     "\n",
-    "#if os.environ['SHOWROUTE'] == 'True':\n",
-    "Image(filename='tmp.jpg')"
+    "if os.environ['SHOWROUTE'] == 'True': \n",
+    "    img = SVG(filename='tmp.svg')\n",
+    "    display(img)"
    ]
   },
   {
@@ -115,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -295,6 +298,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -317,6 +321,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -341,6 +346,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -358,7 +364,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "!python solve_maze.py test_maze_04.txt showroute"
@@ -378,7 +386,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "st.trials('test_maze_01.txt', num = 500)"
@@ -387,7 +397,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "st.trials('test_maze_02.txt', num = 500)"
@@ -397,6 +409,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -408,6 +421,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
